--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -177,6 +177,7 @@
                                         {% endif %}
                                         <div class="col-lg-4">
                                             <p><strong>Select the Date: </strong><i class="far fa-calendar-alt"></i>
+                                                <label for="datepicker"></label>
                                                 <input type="text" class="calendar form-control" name="booking_date"
                                                     id="datepicker" oninput="this.setCustomValidity('')"
                                                     oninvalid="this.setCustomValidity('Please select the date for your trip')"
