--- a/trips/templates/trips/includes/delete-modal-review.html
+++ b/trips/templates/trips/includes/delete-modal-review.html
@@ -1,8 +1,8 @@
-<a class="d-inline btn remove-item m-1"  data-bs-toggle="modal" data-bs-target="#exampleModal-{{ review.id }}">
+<button class="d-inline btn remove-item m-1"  data-bs-toggle="modal" data-bs-target="#exampleModal-{{ review.id }}">
     <i class="fas fa-trash" aria-hidden="true"></i>
     <span class="sr-only">delete</span>
     Delete
-</a>    
+</button>    
 <!-- Modal -->
 <div class="modal fade" id="exampleModal-{{ review.id }}" tabindex="-1"
     aria-labelledby="exampleModalLabel-{{ review.id }}" aria-hidden="true">
