--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -140,7 +140,7 @@
                             <form action="{% url 'add_to_bag' trip.id %}" method="POST">
                                 {% csrf_token %}
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">{{ trip.name }}</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel-{{trip.id}}">{{ trip.name }}</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                                     </button>
                                 </div>
