Updated pages with compressed image files

--- a/contact/templates/about/about.html
+++ b/contact/templates/about/about.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="col-md-8 col-sm-12">
-                <img src="{{ MEDIA_URL }}media/sea-cave.jpg" class="img-fluid" alt="sea sea-cave">
+                <img src="{{ MEDIA_URL }}media/blue-lagoon.jpg" class="img-fluid" alt="sea-cave">
             </div>
             <div class="col-md-4 col-sm-12">
                 <h3>Stress Free Vacation</h3>
@@ -44,7 +44,7 @@
         <hr>
         <div class="row">
             <div class="col-md-8 col-sm-12">
-                <img src="{{ MEDIA_URL }}media/speed-boat.jpg" class="img-fluid" alt="speed boat">
+                <img src="{{ MEDIA_URL }}media/speedboat.jpg" class="img-fluid" alt="speed boat">
             </div>
             <div class="col-md-4 col-sm-12">
                 <h3>Collaborate with Us</h3>
