--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,15 +16,15 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{{ MEDIA_URL }}media/catamaran.png"
+                            <img src="{{ MEDIA_URL }}media/catamaran.jpg"
                                 class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ MEDIA_URL }}media/gozo.png"
+                            <img src="{{ MEDIA_URL }}media/gozo.jpg"
                                 class="d-block w-100 carousel-img" alt="gozo island">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ MEDIA_URL }}media/maltese-boats.png"
+                            <img src="{{ MEDIA_URL }}media/maltese-boats.jpg"
                                 class="d-block w-100 carousel-img" alt="traditional maltese boats">
                         </div>
                     </div>
