Added a class on line 122 to make the image clickable

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -119,7 +119,7 @@
                 <div class="card bg-dark h-100 m-1">
                     <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
                     <div class="card-img-overlay">
-                        <a href="{{ category.get_url }}" class="category-link">
+                        <a href="{{ category.get_url }}" class="category-link stretched-link">
                             <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}
                             </h5>
                         </a>
