--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,12 +11,14 @@ body {
     padding: 0;
     font-family: 'Oxygen', sans-seri;
     color: #000000;
-    background-color: #fafafa;
+    font-weight: 500;
     font-size: 1.2rem;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    background-color: rgba(97, 95, 95, 0.1);
 }
+
 
 .container {
     margin-top: 4rem;
@@ -518,7 +520,9 @@ a.ui-button:active,
     color: #2576da;
 }
 
-
+.login-form {
+    background-color: #fafafa;
+}
 
 .trip-link strong:hover {
     color: #fafafa;
