Added a custom class on line 224

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -221,7 +221,7 @@
         <!--Pagination-->
         <div class="row mt-3">
             <div class="col">
-                <nav aria-label="Page navigation example">
+                <nav aria-label="Page navigation example" class="pagination-nav">
                     <!--Check if the trips has more pages and display dynamically-->
                     {% if trips.has_other_pages %}
                     <ul class="pagination justify-content-center">
