--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -110,10 +110,11 @@
                                 <label for="adult_input_{{ item.trip.id }}"></label>
                                 <input class="form-control form-control-sm qty_input" type="number" name="adult_tickets"
                                     value="{{ item.adult_tickets }}" data-item_id="{{ item.trip.id }}" max="8" min="1"
-                                    id="adult_input_{{ item.trip.id }}"oninput="this.setCustomValidity('')"
+                                    id="adult_input_{{ item.trip.id }}" oninput="this.setCustomValidity('')"
                                     oninvalid="this.setCustomValidity('Maximum number of tickets can be selected is 8')">
                                 <div class="input-group-append">
-                                    <button type="submit" class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}">
+                                    <button type="submit" class="add-quantity btn btn-sm"
+                                        data-item_id="{{ item.trip_id }}">
                                         <span>
                                             <i class="fas fa-plus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">plus</span>
@@ -137,12 +138,14 @@
                                 </div>
                                 <label for="child-input_{{item.trip.id}}"></label>
                                 <input class="form-control form-control-sm qty_input child-input" type="number"
-                                    id="child-input_{{item.trip.id}}" max="8" min="0" oninput="this.setCustomValidity('')"
+                                    id="child-input_{{item.trip.id}}" max="8" min="0"
+                                    oninput="this.setCustomValidity('')"
                                     oninvalid="this.setCustomValidity('Maximum number of tickets can be selected is 8')"
                                     name="children_tickets" value="{{ item.children_tickets }}"
                                     data-item_id="{{ item.trip.id }}">
                                 <div class="input-group-append">
-                                    <button type="submit" class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}">
+                                    <button type="submit" class="add-quantity btn btn-sm"
+                                        data-item_id="{{ item.trip_id }}">
                                         <span>
                                             <i class="fas fa-plus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">plus</span>
@@ -187,11 +190,11 @@
             <div class="row m-1">
                 <div class="col">
                     <div class="float-end">
-                       <h4 class="d-inline">Grand Total</h4>
-                       <p class="d-inline">
-                           <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ grand_total }}
-                           <span class="sr-only">euro</span>
-                       </p>
+                        <h4 class="d-inline">Grand Total</h4>
+                        <p class="d-inline">
+                            <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ grand_total }}
+                            <span class="sr-only">euro</span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -239,9 +242,9 @@
 {% endblock %}
 
 {% block postloadjs %}
-   {{ block.super }}
+    {{ block.super }}
 
-   <script src="{% static 'bag/js/quantity.js' %}"></script>
-   <script src="{% static 'js/datepicker.js' %}"></script>
-
+    <script src="{% static 'bag/js/quantity.js' %}"></script>
+    <script src="{% static 'js/datepicker.js' %}"></script>
+    
 {% endblock %}
