--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,9 @@
 html {
-    height: 100%;
     scroll-behavior: smooth;
     overflow-x: hidden;
     min-height: 100vh;
     position: relative;
+    max-width: 100%;
 }
 
 body {
@@ -18,7 +18,6 @@ body {
     flex-direction: column;
     background-color: rgba(97, 95, 95, 0.1);
 }
-
 
 .container {
     margin-top: 4rem;
@@ -52,8 +51,6 @@ h6 {
     border-radius: 5px;
     box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
-
-
 
 /*************************Navigation*/
 
@@ -224,7 +221,6 @@ header,
     color: #ef1018;
 }
 
-
 .btn-book {
     position: fixed;
     top: 20%;
@@ -252,7 +248,6 @@ header,
     background-color: #039b2b;
 }
 
-
 .modal-btn {
     width: 100%;
     text-align: center;
@@ -275,13 +270,11 @@ header,
     border: 2px solid #000000;
 }
 
-
 .add-booking-btn:hover,
 .modal-btn .btn-secondary:hover {
     background-color: #2576da;
     color: #fafafa;
 }
-
 
 .modal-header {
     background-color: #da8925;
@@ -459,7 +452,7 @@ header,
     color: #fafafa;
 }
 
-/****************Date Picker*/
+/* ***************Date Picker
 
 .ui-datepicker-days-cell-over  > .ui-state-default {
     border: 1px solid #000000 !important;
@@ -507,7 +500,7 @@ a.ui-button:active,
 .update-link:hover {
     background-color: #000000;
     color: #fafafa;
-}
+} */
 
 /****************Login Page*/
 
@@ -671,7 +664,6 @@ footer {
         width: auto;
         margin: 1rem auto;
     }
-
 
     .btn-checkout-mobile {
         position: fixed;
