Removed a class on line 124

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -121,7 +121,7 @@
                 </ul>
             </div>
             {% if trip.num_tickets == 0 %}
-            <button type="button" class="btn btn-md btn-next btn-book btn-sold" disabled>
+            <button type="button" class="btn btn-md btn-next btn-sold" disabled>
                 Sold Out
             </button>
             {% else %}
