Removed extra margin from the container

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -92,7 +92,7 @@
     </div>
 </section>
 <section>
-    <div class="container">
+    <div class="container mt-0">
         <!--display all the trips-->
         <div class="row">
             <div class="col">
