Customized stretched-link not to overflow on the heading

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -91,6 +91,10 @@
     font-size: 1.3rem;
 }
 
+.stretched-link::after {
+    top: 40%;
+}
+
 /* -------------------------------- Media Queries */
 @media (max-width: 420px) {
     .category-heading {
